# breezy-til-cli

./: .auto_git_config.json  .gitignore  LICENSE  README.md  pyproject.toml  run_tests.py
.github/workflows/: publish.yml
.templates/: bugfix.md  custom.md  default.md  minimal.md  project.md  study.md  templates.json
bugfix/: 2025-08-02.md
project/: 2025-08-03.md
python/: 2025-08-01.md
test/: 2025-07-27.md  2025-07-28.md  2025-07-29.md  2025-07-30.md  2025-07-31.md  2025-08-07.md
tests/: __init__.py  test_auto_git.py  test_auto_git_integration.py  test_config.py  test_file_operations.py  test_git_operations.py  test_link_manager.py  test_zip_generator.py
til/: cli.py
til/core/: __init__.py  auto_git.py  config.py  file_operations.py  git_operations.py  index_generator.py  link_manager.py  metadata.py  streak_analyzer.py  template_manager.py  visualizer.py  zip_generator.py
